--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp-html-beautify": "^1.0.1",
     "gulp-pug": "^4.0.1",
     "gulp4": "^4.0.2",
+    "hoek": "^6.1.2",
     "js-beautify": "^1.8.9",
     "pug": "^2.0.3"
   },
